# GoalsWithAISuggestion

backend/goals-maker/: pyproject.toml
backend/goals-maker/goals_maker/: api.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
